# snake

./: .gitignore  CMakeLists.txt  README.md
src/: ai.cpp  ai.h  game.cpp  game.h  gif.cpp  gif.h  main.cpp  render.cpp  render.h  sprites.h
